# tcglense

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
api/: .env.example  .gitignore  Cargo.toml
api/.cargo/: audit.toml  config.toml
api/scripts/: gen-sld-drops.mjs  gen-subtype-overrides.mjs
api/src/: alerts.rs  analytics_cache.rs  captcha.rs  client_ip.rs  config.rs  currency.rs  datasets.rs  db.rs  db_lock.rs  email.rs  error.rs  extract.rs  integration_pg.rs  main.rs  notifications.rs  openapi.rs  ratelimit.rs  release_alerts.rs  router.rs  security_tests.rs  state.rs  tasks.rs  test_support.rs
api/src/auth/: api_key.rs  cli_auth.rs  cookie.rs  email_token.rs  extractor.rs  jwt.rs  mod.rs  password.rs  refresh.rs  secret.rs  username.rs
api/src/catalog/: fingerprint_sync.rs  fingerprint_tasks.rs  fingerprints.rs  images.rs  ingest_state.rs  mod.rs  sld_product_dates.rs
api/src/collection_import/: archidekt.rs  consolidate.rs  csv_import.rs  error.rs  jobs.rs  mod.rs  moxfield.rs  progress.rs  rate_limit.rs  reconcile.rs  smart.rs  text_list.rs  types.rs
api/src/deck_import/: archidekt.rs  categorize.rs  mod.rs  moxfield.rs  parser.rs  types.rs
api/src/entities/: alert_channel.rs  api_key.rs  art_tag.rs  card.rs  card_art_tag.rs  card_fingerprint.rs  card_price_history.rs  card_ruling.rs  card_set.rs  cli_auth_code.rs  collection_item.rs  collection_product_item.rs  collection_source.rs  collection_visibility.rs  deck.rs  deck_card.rs  deck_folder.rs  deck_section.rs  email_token.rs  ingest_state.rs  mod.rs  prelude.rs  price_alert.rs  product.rs  product_price_history.rs  refresh_token.rs  release_notification.rs  sealed_component.rs  sealed_content.rs  sld_drop_snapshot.rs  user.rs  wishlist_item.rs  wishlist_product_item.rs
api/src/handlers/: api_keys.rs  auth.rs  cache.rs  catalog.rs  cli_auth.rs  collection.rs  config.rs  currency.rs  health.rs  mirror.rs  mod.rs  openapi.rs  robots.rs  sitemap.rs
api/src/handlers/alerts/: mod.rs  read.rs  write.rs
api/src/handlers/catalog/: art_tags.rs  cards.rs  image.rs  mod.rs  prices.rs  pricing.rs  products.rs  rulings.rs  scan.rs  sets.rs  status.rs  tests.rs
api/src/handlers/collection/: export.rs  import.rs  mod.rs  price_movements.rs  products.rs  read.rs  sets.rs  tests.rs  value_history.rs  write.rs
api/src/handlers/decks/: cards.rs  copy.rs  export.rs  folders.rs  import.rs  mod.rs  needed.rs  read.rs  sections.rs  write.rs
api/src/handlers/prerender/: mod.rs  structured_data.rs  template.rs
api/src/handlers/shared/: dto.rs  grouping.rs  holdings.rs  lookup.rs  mod.rs  pagination.rs  pricing.rs  product_holdings.rs  search.rs  (+2 more)
api/src/migrator/: m20240101_000001_create_users_table.rs  m20240101_000002_create_refresh_tokens_table.rs  m20240101_000003_add_replaced_by_to_refresh_tokens.rs  m20240101_000004_create_card_sets_table.rs  m20240101_000005_create_cards_table.rs  m20240101_000006_create_ingest_state_table.rs  m20240101_000007_add_text_stats_to_cards.rs  m20240101_000008_create_card_price_history_table.rs  m20240101_000009_add_cards_oracle_id_index.rs  m20240101_000010_create_collection_items_table.rs  m20240101_000011_create_collection_sources_table.rs  m20240101_000012_add_collection_source_smart.rs  m20240101_000013_add_scryfall_fields_to_cards.rs  m20240101_000014_add_user_email_verified_at.rs  m20240101_000015_create_email_tokens_table.rs  m20240101_000016_create_wishlist_items_table.rs  m20240101_000017_make_user_password_hash_nullable.rs  m20240101_000018_add_tcgplayer_ids_to_cards.rs  m20240101_000019_create_products_table.rs  m20240101_000020_create_product_price_history_table.rs  m20240101_000021_create_sealed_contents_table.rs  m20240101_000022_add_recency_and_prune_indexes.rs  m20240101_000023_consolidate_foil_star_holdings.rs  m20240101_000024_add_cards_set_code_collector_number_index.rs  m20240101_000025_add_browse_sort_and_email_prune_indexes.rs  m20240101_000026_add_cards_game_finishes_index.rs  m20240101_000027_add_cards_trgm_search_indexes.rs  m20240101_000028_create_sealed_components_table.rs  m20240101_000029_add_msrp_to_products.rs  m20240101_000030_create_api_keys_table.rs  m20240101_000031_add_card_price_history_covering_index.rs  m20240101_000032_create_card_fingerprints_table.rs  m20240101_000033_add_cards_subtype_facet_index.rs  m20240101_000034_add_cards_subtype_partial_index.rs  m20240101_000035_create_wishlist_product_items_table.rs  m20240101_000036_add_username_and_discriminator_to_users.rs  m20240101_000037_create_collection_visibility_table.rs  m20240101_000038_drop_user_display_name.rs  m20240101_000039_add_collection_display_prefs.rs  m20240101_000040_create_deck_folders_table.rs  (+23 more)
api/src/mtgjson/: client.rs  error.rs  fallback.rs  fallback_sealed.json  ingest.rs  mod.rs  model.rs  progress.rs  sld.rs
api/src/phash/: basis.rs  mod.rs
api/src/ratelimit/: backend.rs  mod.rs  per_ip.rs  per_user.rs
api/src/scryfall/: client.rs  drops.rs  dummy.rs  foil_variants.rs  ingest.rs  map.rs  mod.rs  model.rs  price_history.rs  progress.rs  rulings.rs  search.rs  sld_drops.json  sld_persist.rs  sld_scrape.rs  sld_sync.rs  sld_tasks.rs  subtype_overrides.json  subtypes.rs
api/src/security_tests/: alerts.rs  api_keys.rs  caching.rs  captcha.rs  cli_auth.rs  collection.rs  collection_import.rs  collection_products.rs  cors.rs  decks.rs  email_verification.rs  harness.rs  headers.rs  login.rs  mirror.rs  mod.rs  openapi.rs  pagination.rs  password_reset.rs  prerender.rs  products.rs  public_collection.rs  public_wishlist.rs  rate_limit.rs  readiness.rs  refresh.rs  registration.rs  request_body.rs  request_params.rs  robots.rs  rulings.rs  scan.rs  search.rs  sharing.rs  signup_toggle.rs  sitemap.rs  subtypes.rs  web_root.rs  wishlist.rs  wishlist_products.rs
api/src/tcgcsv/: backfill.rs  classify.rs  client.rs  error.rs  ingest.rs  mod.rs  model.rs  msrp.json  msrp.rs  price_history.rs  progress.rs  sld_msrp.json  sld_msrp.rs  sld_release.rs
cli/: Cargo.toml  README.md
cli/src/: cli.rs  main.rs
cli/src/commands/: misc.rs  mod.rs
(+607 files in other folders)
