[package]
name = "tcglense-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures-util = "0.3.32"
governor = "0.10.4"
hex = "0.4.3"
indicatif = "0.18"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
nonzero_ext = "0.3.0"
rand = "0.10.1"
# Distributed rate-limiter backend (optional at runtime via REDIS_URL). Always
# compiled; the in-memory governor limiter is used when REDIS_URL is unset or Redis
# is unreachable. `tokio-comp` = no TLS (plain redis:// on a private network — no
# rustls crypto-provider hazard); `connection-manager` gates the cloneable
# auto-reconnecting multiplexed async connection; `script` gates `redis::Script`
# (the GCRA Lua EVALSHA path — NOT enabled by tokio-comp/connection-manager in 1.3).
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
regex = "1.12"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "stream", "json"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Only the PPMd decoder is needed to read TCGCSV's price archives (solid PPMd 7z);
# default features (aes256/bzip2/compress-encoder) are off to keep the build lean.
sevenz-rust2 = { version = "0.21.2", default-features = false, features = ["ppmd"] }
sha2 = "0.11.0"
# Direct dep so the `regexp` feature is enabled on the (feature-unified) sqlx-sqlite
# that SeaORM already uses — registers a REGEXP function on every connection for the
# Scryfall regex filters (o:/…/, name:/…/, etc.).
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "regexp"] }
thiserror = "2.0.18"
time = "0.3.51"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
# `fs` gates ServeDir/ServeFile — the optional static-SPA fallback served when
# WEB_ROOT is set (the single-process "combined" Docker image; see router.rs).
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
# `util` brings `tower::ServiceExt::oneshot`, used by the HTTP security tests to
# drive the real router in-process (no TCP bind). Feature-unified with the
# runtime `tower` dep above; only compiled for tests.
tower = { version = "0.5.3", features = ["util"] }
# Generates the SPA's wire types (web/src/lib/api/generated) from the wire DTOs'
# `#[cfg_attr(test, derive(ts_rs::TS))]` derives: `cargo test` writes the files (export
# dir + number bindings configured in .cargo/config.toml). `chrono-impl` maps the
# `DateTimeUtc` fields to `string`.
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
