[package]
name = "tcglense-api"
version = "0.14.5"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures-util = "0.3.32"
governor = "0.10.4"
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
indicatif = "0.18"
# This service signs only HS256 tokens. Use jsonwebtoken's aws-lc provider (already
# linked by rustls below) so the unused RSA implementation is not pulled into the
# production binary; rsa 0.9 has the unfixed RUSTSEC-2023-0071 timing advisory.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs"] }
nonzero_ext = "0.3.0"
rand = "0.10.1"
# Distributed rate-limiter backend (optional at runtime via REDIS_URL). Always
# compiled; the in-memory governor limiter is used when REDIS_URL is unset or Redis
# is unreachable. `tokio-comp` = the plain-TCP async connection; `tokio-rustls-comp`
# + `tls-rustls-webpki-roots` add `rediss://` TLS (rustls with bundled Mozilla roots)
# so hosted providers like Upstash work over the public internet. All rustls users
# in this crate (reqwest, SeaORM/sqlx Postgres TLS, and now redis) share one process
# provider, pinned to aws-lc-rs in `main` — see the note there. `connection-manager`
# gates the cloneable auto-reconnecting multiplexed async connection; `script` gates
# `redis::Script` (the GCRA Lua EVALSHA path — NOT enabled by the others in 1.3).
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager", "script"] }
regex = "1.12"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "stream", "json"] }
# Direct dep only to pin the shared rustls crypto provider (aws-lc-rs) as the process
# default in `main`: reqwest, SeaORM/sqlx (Postgres TLS) and redis (`rediss://`) all
# use one process-wide rustls, and 0.23 refuses to auto-select when more than one
# provider is linked. Matches the aws-lc-sys the build already compiles.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rustrict = { version = "0.7.38", default-features = false, features = ["censor"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Only the PPMd decoder is needed to read TCGCSV's price archives (solid PPMd 7z);
# default features (aes256/bzip2/compress-encoder) are off to keep the build lean.
sevenz-rust2 = { version = "0.21.2", default-features = false, features = ["ppmd"] }
sha2 = "0.11.0"
# Direct dep so the `regexp` feature is enabled on the (feature-unified) sqlx-sqlite
# that SeaORM already uses — registers a REGEXP function on every connection for the
# Scryfall regex filters (o:/…/, name:/…/, etc.). `postgres` is likewise already in
# the unified feature set via SeaORM; naming it here keeps `crate::db_lock`'s use of
# a pinned PgPool connection (session advisory locks) from depending on SeaORM's
# feature list.
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "postgres", "regexp"] }
thiserror = "2.0.18"
time = "0.3.51"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
# `fs` gates ServeDir/ServeFile — the optional static-SPA fallback served when
# WEB_ROOT is set (the single-process "combined" Docker image; see router.rs).
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
url = "2.5.8"

[dev-dependencies]
# `util` brings `tower::ServiceExt::oneshot`, used by the HTTP security tests to
# drive the real router in-process (no TCP bind). Feature-unified with the
# runtime `tower` dep above; only compiled for tests.
tower = { version = "0.5.3", features = ["util"] }
# Generates the SPA's wire types (web/src/lib/api/generated) from the wire DTOs'
# `#[cfg_attr(test, derive(ts_rs::TS))]` derives: `cargo test` writes the files (export
# dir + number bindings configured in .cargo/config.toml). `chrono-impl` maps the
# `DateTimeUtc` fields to `string`.
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
